# argumentation-tableau

./: .gitignore  README.md  anaconda-project-lock.yml  anaconda-project.yml  propositional_logic.py  pyproject.toml  requirements.txt
api/: defeasible-tableau.py  propositional-tableau.py
public/: defeasible-tableau.html  index.html  propositional-tableau.html
src/: TEMP_file_reader.py  __main__.py  decision_support_system.py  decision_support_system_test.py  defeasible_tableau.py  defeasible_tableau_test.py  example.txt  propositional_logic.py  propositional_logic_parser.py  propositional_logic_test.py  propositional_parser.py  propositional_parser_test.py  propositional_tableau.py  propositional_tableau_test.py  propositional_tableaux_tree.py  propositional_tableaux_tree_test.py  scenery_test_set.py  user_input.py
src/i_o/: file_reader.py  user_input.py
src/reasoning_elements/: argument.py  node.py  operator.py  proposition.py  proposition_test.py  rule.py  test.py
src/sample_rule_sets/: british_national_act.json  cremers_example.json
