[tool.poetry]
name = "xai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.10.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
